--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.17",
     "@types/socket.io-client": "^3.0.0",
     "autoprefixer": "^10.4.16",
+    "babel": "^6.23.0",
     "d3": "^7.8.5",
     "lodash": "^4.17.21",
     "postcss": "^8.4.31",
